--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'react-app/*'\" \"npm run client\"",
-    "client": "cd react-app && npm run start",
-    "install": "cd react-app && npm install",
-    "build": "cd react-app && npm install && npm run build",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm install && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
